#51 사용자 입찰기록 저장