@@ -6,9 +6,11 @@ package com.goodsple.features.auction.scheduler;
 
 import com.goodsple.features.admin.auction.mapper.AuctionMapper;
 import com.goodsple.features.auction.dto.AuctionState;
+import com.goodsple.features.auction.dto.BidLogDto;
 import com.goodsple.features.auction.dto.response.BidHistoryInfo;
 import com.goodsple.features.auction.service.AuctionRealtimeService;
 import com.goodsple.features.auction.util.AuctionRedisKeyManager;
+import com.goodsple.features.order.entity.Order;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
@@ -16,10 +18,12 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -53,7 +57,7 @@ public class AuctionScheduler {
      * 1분마다 실행되어 종료 시간이 된 경매를 'ended' 상태로 변경하고,
      * Redis의 최종 결과를 DB에 저장합니다.
      */
-    @Scheduled(cron = "0 * * * * *") // 매 분 0초에 실행
+    @Scheduled(cron = "0 * * * * *")
     @Transactional
     public void endAuctions() {
         log.info("경매 자동 종료 스케줄러 실행...");
@@ -70,32 +74,45 @@ public class AuctionScheduler {
                 continue;
             }
 
-            // 1. Redis에서 최종 낙찰 정보 가져오기
             Long winnerId = Long.valueOf(finalState.get("topBidderId").toString());
             Object finalPriceObj = finalState.get("currentPrice");
 
-            // 2. 최종 낙찰 정보가 있으면 DB에 업데이트
             if (winnerId > 0) {
-                auctionMapper.updateAuctionWinner(auctionId, winnerId, new java.math.BigDecimal(finalPriceObj.toString()));
+                // 1. 최종 낙찰 정보 DB 업데이트
+                BigDecimal finalPrice = new BigDecimal(finalPriceObj.toString());
+                auctionMapper.updateAuctionWinner(auctionId, winnerId, finalPrice);
 
-                // 3. Redis에 저장된 모든 입찰 기록을 DB로 옮기기
+                // 2. Redis 입찰 기록 DB로 이전
                 String bidsKey = keyManager.getAuctionBidsKey(auctionId);
                 Set<Object> bidObjects = redisTemplate.opsForZSet().range(bidsKey, 0, -1);
                 if (bidObjects != null && !bidObjects.isEmpty()) {
-                    List<BidHistoryInfo> bidsToSave = bidObjects.stream()
-                            .map(obj -> (BidHistoryInfo) obj)
-                            .toList();
-                    // TODO: bidsToSave를 DB에 저장하는 로직 필요 (Batch Insert)
+                    List<BidLogDto> bidsToSave = bidObjects.stream()
+                            .map(obj -> {
+                                BidHistoryInfo info = (BidHistoryInfo) obj;
+                                // 이제 info 객체에 userId가 있으므로, DB 조회 없이 바로 사용합니다.
+                                return new BidLogDto(auctionId, info.getUserId(), info.getBidAmount(), info.getTimestamp());
+                            })
+                            .collect(Collectors.toList());
+
+                    if (!bidsToSave.isEmpty()) {
+                        auctionMapper.insertBidsBatch(bidsToSave);
+                    }
                 }
 
-                // 4. orders 테이블에 주문 생성
-                // TODO: orders 테이블에 주문을 생성하는 로직 필요
+                // 3. orders 테이블에 주문 생성
+                Order newOrder = Order.builder()
+                        .auctionId(auctionId)
+                        .userId(winnerId)
+                        .orderAmount(finalPrice) // orderFinalPrice -> orderAmount
+                        .orderStatus("pending") // 초기 상태는 '결제 대기'
+                        .build();
+                auctionMapper.insertOrder(newOrder);
             }
 
-            // 5. DB 상태를 'ended'로 변경
+            // 4. DB 상태를 'ended'로 변경
             auctionMapper.updateAuctionStatus(auctionId, "ended");
 
-            // 6. Redis 데이터 정리
+            // 5. Redis 데이터 정리
             redisTemplate.delete(stateKey);
             redisTemplate.delete(keyManager.getAuctionBidsKey(auctionId));
             log.info("경매 ID {}의 Redis 데이터가 정리되었습니다.", auctionId);
